# NBA-PRA-Model

./: .gitignore  CHANGELOG.md  README.md  main.py  predict_today.sh  pyproject.toml
.claude/: CLAUDE.md
backtest/: README.md  betting_evaluator.py  config.py  data_loader.py  reporting.py  run_backtest.py  statistical_analysis.py  walk_forward_engine.py
backtest/monte_carlo/: README.md  __init__.py  betting_calculator.py  calibration.py  distribution_fitting.py  variance_model.py  visualization.py
backtest/results/: README.md  (+4 more)
docs/: production_architecture.md  test_results_task4.md
feature_engineering/: __init__.py  advanced_metrics.py  build_features.py  config.py  contextual_features.py  csv_data_loader.py  data_loader.py  injury_features.py  matchup_features.py  pipeline.yaml  position_features.py  rolling_features.py  run_pipeline.py  utils.py  validate_features.py
model_training/: __init__.py  config.py  example_mlflow_usage.py  mlflow_config.py  models.py  pipeline.yaml  run_pipeline.py  train_model.py  train_split.py  training.py  utils.py  validation.py
production/: README.md  __init__.py  betting_engine.py  cli.py  config.py  exceptions.py  ledger.py  logging_config.py  model_trainer.py  monte_carlo.py  odds_fetcher.py  predictor.py  recommend_bets.py  run_daily.py  run_full_pipeline.py  upcoming_games_fetcher.py
tests/: QUICK_REFERENCE.md  README.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_ctg_deduplication.py  test_leakage_prevention.py  test_rolling_features.py  test_utils.py  test_validation.py
validation/: data_validation.py
(+29 files in other folders)
