[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-pra"
version = "0.1.0"
description = "NBA PRA Prediction Model - Feature Engineering Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    "nba-api>=1.4.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0.3",
    "mlflow>=2.8.0",
    "scipy>=1.11.0",
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
    "requests>=2.31.0",
    "pytz>=2023.3",
]

[project.scripts]
nba-pra = "production.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["production*", "feature_engineering*", "model_training*"]
exclude = ["tests*", "docs*", "data*", "logs*", "mlruns*", "models*", "research*", "analysis*", "validation*", "backtest*"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (end-to-end workflows)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
